<resources>
    <string name="app_name">Java За Всеки</string>
    <string name="signin">ВЛЕЗ</string>
    <string name="Create_an_account">"  "РЕГИСТРАЦИЯ"  "</string>
    <string name="ins_password">Въведете Парола</string>
    <string name="rePassword">Въведете Паролата Отново</string>
    <string name="ins_email">Въведете e-mail</string>
    <string name="success_login_msg">Влязохте Успешно</string>
    <string name="error_login_msg">Моля въведете всички полета</string>
    <string name="retype_password">Въведете Паролата Отново</string>
    <string name="ins_username">Въведете Потребителско Име</string>
    <string name="loginfailed">Влизането Неуспешно! Опитайте Отново</string>
    <string name="loginsuccess">Влязохте Успешно</string>
    <string name="login">Влез</string>
    <string name="achievements">Постижения</string>
    <string name="first_achievement">Първо Постижение</string>
    <string name="first_ach_info">Отключва се когато си вземете първият тест</string>
    <string name="level_up_achievement">По - Високо ниво!</string>
    <string name="level_up_ach_info">Отключва се при два взети теста</string>
    <string name="code_master_achievement">Влез в Матрицата!</string>
    <string name="code_master_ach_info">Отключва се при взимане на всички тестове</string>
    <string name="hundred_ach">Пъривят от Много</string>
    <string name="hundred_ach_info">Поздравления! Ти си получил 100 от 100 на тест</string>
    <string name="sticky_fingers_ach">Непослушни Пръсти</string>
    <string name="sticky_fing_ach_info">Трябва ти повече упражнение за по - добър резултат</string>
    <string name="you_actually_did_it">Ти Всъщност Се Справи!</string>
    <string name="did_it_ach_info">Поздравления, ти взе всички постижения!</string>
    <string name="arrays">Масиви</string>
    <string name="next">Напред</string>
    <string name="cond_loops">Условия и цикли</string>
    <string name="profile">Профил</string>
    <string name="introduction">Въведение</string>
    <string name="methodsNrecursion">Методи и рекурсия</string>
    <string name="strings">Символни низове</string>
    <string name="algorithms">Алгоритми</string>
    <string name="stages">Етапи</string>
    <string name="remember_me">Запомни ме</string>
    <string name="register">Регистрация</string>
    <string name="forget_password">Забравена Парола</string>
    <string name="profile_bg">Профил</string>
    <string name="username">Потребителско Име</string>
    <string name="last_achievement">Последно Постижение :</string>
    <string name="current_stage">Текущ Етап :</string>
    <string name="help_points">Помощни Точки :</string>
    <string name="change_pass">Смени Парола</string>
    <string name="invite_friend">Покани Приятел</string>
    <string name="logout">Излез</string>
    <string name="home">Етапи</string>
    <string name="sign_up">Регистрация</string>
    <string name="possitive">Да</string>
    <string name="negative">Не</string>
    <string name="exit_prompt">Искате ли да излезете от Java За Всеки?</string>
    <string name="log_out_msg">Искате ли да излезете</string>
    <string name="submit">Предай</string>
    <string name="previous">Назад</string>
    <string name="insert_friend_mail">Въведете поща на приятел</string>
    <string name="algorith_answer">В зависимост от  промяна на вх.данни</string>
</resources>
