<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pink_nuances"
    tools:context="com.example.sethcohen.javaforeveryone3.HomeScreen">

    <EditText
        android:id="@+id/username_dialoglogin"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/ins_username"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_dialoglogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ins_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@color/colorPrimaryDark">
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkbox_rememberme_dialoglogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/remember_me"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#0097A7"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_dialoglogin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0097A7"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:text="@string/login" />


</LinearLayout>