<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/red_mountain">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/achievements"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#0097A7"
                android:textSize="26sp"
                app:layout_constraintHorizontal_bias="0.061"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <view
                android:id="@+id/view_1_space_achievements"
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <view
                android:id="@+id/view_2_space_achievements"
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/first_ach_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_achievement"
                android:textStyle="bold" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/first_ach_info_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/first_ach_info" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/level_up_ach_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_up_achievement"
                android:textStyle="bold" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/level_up_ach_info_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/level_up_ach_info" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/code_master_ach_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_master_achievement"
                android:textStyle="bold" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/code_master_ach_info_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/code_master_ach_info" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/hundred_ach_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hundred_ach"
                android:textStyle="bold" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/hundred_ach_info_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hundred_ach_info" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/sticky_fing_ach_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sticky_fingers_ach"
                android:textStyle="bold" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="3dp" />

            <TextView
                android:id="@+id/sticky_fing_ach_info_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sticky_fing_ach_info" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/did_it_ach_achievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_actually_did_it"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <view
                class="android.support.v4.widget.Space"
                layout_width="match_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/did_it_ach_info_achievements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/did_it_ach_info"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_badge1_achievements"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/it_talents_logo_inner"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/img_badge2_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/it_talents_logo_inner"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/img_badge3_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/it_talents_logo_inner"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/img_badge4_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/it_talents_logo_inner"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/img_badge5_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/it_talents_logo_inner"
            android:layout_weight="1"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/img_badge6_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/it_talents_logo_inner"
            android:layout_weight="1"
            android:layout_marginBottom="190dp"
            android:visibility="invisible"
            />


    </LinearLayout>
</LinearLayout>
