<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_nuances"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    tools:context="com.example.sethcohen.javaforeveryone3.HomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_home_profile"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_on_click_radius"
            android:text="@string/home"
            android:textColor="@android:color/background_light"
            android:textStyle="bold|italic"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile_bg"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_logout_prifle"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_on_click_radius_left"
            android:text="@string/logout"
            android:textColor="@android:color/background_light"
            android:textStyle="bold|italic"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lastAchievement_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elegantTextHeight="true"
                android:text="@string/last_achievement"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/lastAchievement_Input_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Your last achievement"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elegantTextHeight="true"
                android:text="Email : "
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/email_insert_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Your E-mail Here"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_stage_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elegantTextHeight="true"
                android:text="@string/current_stage"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/current_stage_input_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Your Current stage Here"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_helpPoints_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elegantTextHeight="true"
                android:text="@string/help_points"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/Points_Input_Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9"
                android:hint="Your HelpPoints Here"
                android:inputType="number"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_inviteFriend_profile"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_marginTop="499dp"
            android:layout_weight="1"
            android:background="#0097A7"
            android:text="@string/invite_friend"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/btn_changePass_profile"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_marginTop="499dp"
            android:layout_weight="1"
            android:background="#0097A7"
            android:text="@string/change_pass"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:typeface="monospace"/>

        <Button
            android:id="@+id/btn_Achievements_Profile"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="111dp"
            android:layout_height="52dp"
            android:layout_marginTop="499dp"
            android:layout_weight="1"
            android:background="#0097A7"
            android:text="@string/achievements"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:typeface="monospace"/>
    </LinearLayout>


</LinearLayout>

