<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pink_nuances"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    tools:context="com.example.sethcohen.javaforeveryone3.ConditionsAndLoops">

    <TextView
        android:id="@+id/title_condNloops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/cond_loops"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#0097A7"
        android:textSize="32sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/is_picchanger_condNloops"
            android:src="@drawable/condnloops1conditoperatots"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_prev_1_condNloops"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_on_click_next"
            android:text="@string/previous"
            android:textColor="?attr/colorButtonNormal"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <Button
            android:id="@+id/btn_next_1_condNloops"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_not_clicked_next"
            android:text="@string/next"
            android:textColor="?attr/colorButtonNormal"
            />
    </LinearLayout>
</LinearLayout>
